# client-apis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md
pyAnVIL/: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  client_secret.json.enc  notes.txt  pyproject.toml  requirements-apps.txt  requirements-dev.txt  requirements.txt  sequence-diagram.md  setup.py  terra-startup-script.sh
pyAnVIL/anvil/: __init__.py  anvil.py  cli.py  gen3_auth.py  show_projects.py  terra.py
pyAnVIL/anvil/apps/: __init__.py  ccdg.py  cmg.py  thousand_genomes.py
pyAnVIL/anvil/clients/: __init__.py  fhir_client.py  fhir_curl.py  gen3_auth.py  smart_auth.py
pyAnVIL/anvil/data/: .gitignore  README.md
pyAnVIL/anvil/dbgap/: api.py
pyAnVIL/anvil/etl/: __init__.py  anvil_etl.py  (+5 more)
pyAnVIL/apps/: README.md  dbgap.py  graph_summarizer.py  make_graph.py  node_counts.py  report.md.template  requirements.txt
pyAnVIL/docs/: .gitignore  README.md  anvil.rst  cmg-projects.ipynb  conf.py  contributing.rst  diagram.rst  index.rst  requirements.txt
pyAnVIL/notebooks/: 1000G.ipynb  anvil.ipynb  ccdg-projects.ipynb  cmg-projects.ipynb  dashboard-fhir-0.0.10.ipynb  dashboard-fhir-0.0.6rc2.ipynb  dashboard-fhir-0.0.8rc1.ipynb  fhir-client-0.0.9.ipynb  graph_summarizer.py  gtex.ipynb  ingest-schema.tsv  ingest.ipynb  ingest.py  ingest_helper-0.0.7rc2.ipynb  ingest_helper-0.0.7rc6.ipynb  ingest_helper-0.0.7rc7.ipynb  notebooks_dashboard-0.0.2.ipynb  notebooks_dashboard-fhir-0.0.5rc5.ipynb  qa-fhir-0.0.5rc5.ipynb  summary-graph.cys
pyAnVIL/tests/: conftest.py
(+203 files in other folders)
